debhelper (12.1) UNRELEASED; urgency=medium

  [ Xavier Guimard ]
  * dh_fixperms: add .node in mode_0644_patterns.

  [ Sylvestre Ledru ]
  * dh_strip: Print a warning when an ELF binary does not have a
    build-id (or when dh_strip cannot find it).

 -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100

debhelper (12) unstable; urgency=medium

  [ Niels Thykier ]
  * Release debhelper/12 marking compat 12 as stable.
  * dh: Special NOOP PROMISE of cli-options() to always allow skipping
    the helper (as we know no option can make it change behaviour).

  [ Dmitry Shachnev ]
  * dh_compress: Do not compress mkdocs search indices
    (search_index.json).

 -- Niels Thykier <niels@thykier.net>  Mon, 24 Dec 2018 13:47:55 +0000

debhelper (11.5.4) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib.pm: Reopen stdin to read from /dev/null in doit (and its sibling
    functions) to prevent issues when stdin is open in write-only mode
    (which is what nohup(1) does).  Thanks to Julian Gilbey for reporting
    the issue and providing a sample patch for it as well.
    (Closes: #913663)
  * fr.po: Add missing dash in "--parallel" in a translation.  Thanks to
    Christian Marillat for reporting the issue.  (Closes: #915255)
  * debhelper.7: Document that the "python-distutils" build system is
    removed in compat 12.  Thanks to Axel Beckert for reporting the
    omission.  (Closes: #915530)

  [ Luca Boccassi ]
  * makefile.pm: revert passing V=0/1 to makefiles. Fixes FTBFS in apcupsd
    (and possibly more).
    (Closes: #914419)

 -- Niels Thykier <niels@thykier.net>  Sat, 15 Dec 2018 19:18:47 +0000

debhelper (11.5.3) unstable; urgency=medium

  [ Helmut Grohne ]
  * cmake.pm: Pass the usual CMAKE_SYSTEM_PROCESSOR for ppc64el
    when cross compiling.   (Closes: #913425)

 -- Niels Thykier <niels@thykier.net>  Sat, 10 Nov 2018 21:42:12 +0000

debhelper (11.5.2) unstable; urgency=medium

  [ Luca Boccassi ]